Fixing dark mode button

--- a/assets/css/_darkmode.scss
+++ b/assets/css/_darkmode.scss
@@ -33,8 +33,8 @@ body.dark {
   bottom: 50px;
   right: 50px;
   @include mobile {
-    bottom: 25px;
-    right: 25px;
+    bottom: 10px;
+    right: 10px;
   }
 }
 
